--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+/public/css
+/public/js
+/public/mix-manifest.json
+package-lock.json
+composer.lock
