--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vue-loader": "^16.1.2"
     },
     "dependencies": {
-        "laravel-mix-tailwind": "^0.1.2"
+        "laravel-mix-tailwind": "^0.1.2",
+        "moment": "^2.29.1"
     }
 }
